# chess-engine

./: .gitignore  README.md  angular.json  benchmark-nega-max-7-no-tt.txt  benchmark-nega-max-7-tt-quiesce-tt.txt  benchmark-nega-max-7-tt-quiesce.txt  gmon.out  karma.conf.js  package-lock.json
backend/: Profile.prof  README.md  _move_helper.py  api.py  board.cp39-win_amd64.pyd  board.py  board.pyx  constants.cp39-win_amd64.pyd  constants.pxd  constants.py  constants.pyx  extracted.pgn  main.py  move.pxd  move.py  move.pyx  move_helper.cp39-win_amd64.pyd  move_helper.py  move_helper.pyx  my_openings.json  names.md  opening.py  peft.py  setup.py  setup_opening.py  socketTest.html  start.ps1  test.py
docs/: 0.5a1d28cd051f8b1789f8.worker.js  3rdpartylicenses.txt  index.html  main.0b046f3b5da76514987b.js  main.1ae5993a68c3f53e1090.js  main.217a94ff4d76dec5fefe.js  main.259a0215c857dfa8ae92.js  main.449379a88764f80dcc6d.js  main.56697bef4b533b382607.js  main.5f485f77bf5e53250bdf.js  main.67efd5b2014a0c5e37e6.js  main.7352ab0cda52425d4c49.js  main.a65f63bb7fa402c61fc0.js  main.a8b8a99f4eddaceb5e1b.js  main.aa9d375e283cc6db5731.js  main.b4fe3f397fed3cbd8416.js  main.c9d1e1fa490046d51b63.js  main.cac117cfb07e2fae16b9.js  main.f3cb758eeeb9c1fee7d4.js  (+4 more)
new_backend/: .gitignore  CMakeLists.txt  Dockerfile  README.md
new_backend/opening-extractor/games/: Candidates2013.pgn  FideChamp2002.pgn  FideChamp2005.pgn  Interzonal1993.pgn  WccQual1998.pgn  WccQual2002.pgn  WccQual2007.pgn  WorldCup2007.pgn  WorldCup2009.pgn
new_backend/profiling/: EBF.csv  runtimes.csv
new_backend/src/: App.cpp  AppComponent.hpp  MainEngine.cpp  MainUCI.cpp  Makefile
new_backend/src/controller/: Controller.hpp
new_backend/src/engine/: board.cpp  board.h  constants.cpp  constants.h  enviroment.h  environment.h  evaluation.h  main.cpp  move.cpp  move.h  moveHelper.cpp  moveHelper.h  movepicker.cpp  movepicker.h  uci.cpp  uci.h
new_backend/src/engine/nnue/: accumulator.h  affine-transform.h  architecture.h  clipped-relu.h  feature-set.h  feature-transformer.h  halfkp.cpp  halfkp.h  index-list.h  init.cpp  init.h  input.h  nnue-helper.cpp  nnue-helper.h
new_backend/src/flask/: app.py  start.sh
new_backend/src/tools/: c-chess-cli  run_tournament.py
new_backend/src/tools/books/: 8mvs_big_+80_+109.epd  UHO_V3_6mvs_+090_+099.epd  UHO_V3_6mvs_+090_+099.pgn
new_backend/src/tools/engines/: classic  classic_old  maverick-10-lin32-ja_2500
new_backend/src/wasm/: test.cpp  test.html  test.js  test.wasm
new_backend/src/websocket/: BoardEvents.hpp  SocketRequest.hpp  SocketResponse.hpp  WSListener.cpp  WSListener.hpp
new_backend/test/: WSTest.cpp  WSTest.hpp  tests.cpp
new_backend/test/engine/: CMakeLists.txt  README.md  Test.cpp
new_backend/utility/: install-modules.ps1  install-oatpp-modules.sh  install-test-catch-framework.sh
src/: Makefile  (+14 more)
(+90 files in other folders)
